--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,16 @@
-# Database Configuration
-DB_HOST=your-database-host
-DB_USER=your-username
+# Database Configuration (Aiven MySQL)
+DB_HOST=your-database-host.aivencloud.com
+DB_USER=avnadmin
 DB_PASSWORD=your-password
 DB_NAME=ecom
+DB_PORT=24468
 
 # Server Configuration
 PORT=3001
+NODE_ENV=production
+
+# Frontend URL (for CORS)
+FRONTEND_URL=https://ecom-electromart.netlify.app
 
 # Note: Copy this file to .env and fill in your actual credentials
 # Never commit the .env file to Git!
