--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.3.1",
     "express": "^4.19.2",
     "mysql2": "^3.10.3",
     "nodemon": "^3.1.4"
